--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link href="/css/estilos.css" rel="stylesheet" type="text/css"/>
     <title>Bienvenidos!</title>
 </head>
 <body>
+
 <div class="container">
-    <h3>Bienvenidos al applicativo Deltron</h3>
+    <h3>Bienvenidos a pedidos</h3>
     <div class="row">
         <div class="card">
             <div class="card-body">
@@ -22,11 +23,11 @@
                 </h5>
 
                 <p class="card-text">
-                    Desde aqui podremos realizar el mantenimiento de supplier
+                    Desde aqui podremos realizar el mantenimiento de clientes
                 </p>
 
                 <a th:href="@{/clients}" class="btn btn-primary">
-                    Supplier
+                    Client
                 </a>
 
             </div>
@@ -51,6 +52,10 @@
 
     </div>
 </div>
+
+<footer>
+    &COPY;2019;Elvis
+</footer>
 
 </body>
 </html>
